[package]
name = "asmjr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.10", features = ["macros"] }
pest = "2.1.3"
pest_derive = "2.1.0"
parse_int = "0.6"
prost = "0.10"
zstd = "0.11"
image = "0.24.2"

[build-dependencies]
prost-build = "0.10"