[package]
name = "asmjr"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "src/main.rs"
name = "asmjr-cli"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
phf = { version = "0.10", features = ["macros"] }
pest = "2.1.3"
pest_derive = "2.1.0"
parse_int = "0.6"
prost = "0.10"
zstd = { version = "0.11", default-features = false }
image = "0.24.2"
clap = { version = "3.2.6", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
wasm-bindgen = "0.2"

[build-dependencies]
prost-build = "0.10"